hphp/hack/test/typecheck/namespace_infinite_loop1.php.exp
File "namespace_infinite_loop1.php", line 2, characters 28-28:
An expression is expected here. (Parsing[1002])
File "namespace_infinite_loop1.php", line 3, characters 1-1:
Encountered unexpected text ``, was expecting a expression. (Parsing[1002])
